$Id$


OpenDNSSEC 1.4.0-trunk



OpenDNSSEC 1.4.0rc1 - 2013-01-10

* OPENDNSSEC-359: Remove eppclient


OpenDNSSEC 1.4.0b2 - 2012-12-17

* OPENDNSSEC-292: Provide scripts to convert database between different 
  supported formats
* OPENDNSSEC-299: ods-ksmutil: ods-ksmutil <enter> now includes policy import
* OPENDNSSEC-300: ods-ksmutil: policy purge documented with a warning
* OPENDNSSEC-315: "ods-hsmutil logout" will delete any credentials in the
  shared memory.
* OPENDNSSEC-330: Signer Engine: NSEC3PARAM TTL should be set to zero.
* OPENDNSSEC-338: ods-ksmutil: fix zone delete on MySQL (broken by SUPPORT-27)
* OPENDNSSEC-345: ods-ksmutil: use ods-control to HUP the enforcerd process
* ods-ksmutil: Deprecate the one-step key backup command

Bugfixes:
* SUPPORT-40: Signer Engine: Keep occluded data in signed zone files/transfers.
* OPENDNSSEC-349: Enforcer: Fix some memory leaks in the enforcer found by valgrind.
* OPENDNSSEC-353: Signer Engine: Add/remove NSEC3s for empty non-terminals between apex and
  delegation when DS is added/removed.
* Signer Engine: Fixed locking and notification on the drudge work queue, signals could be missed
  so that drudgers would stall when there was work to be done.
* libhsm: Fixed PIN handling on OpenBSD.
* Enforcer: If enabled enforcer workers and configured number of workers is 1,
  make sure that enforcer runs the signer update command after signer
  configuration change.
* Signer Engine: Don't add double RRSIGs generated by the same key for the
  DNSKEY RRset.
* Signer Engine: Rollback incompleted zone transfers on disk (could happen
  if a connection was reset during transfer).
* Multi-threaded enforcer: various minor fixes including deadlock problems.


OpenDNSSEC 1.4.0b1 - 2012-09-06

* OPENDNSSEC-130: libhsm: The PIN is now optional in conf.xml. The PIN can be
  entered using "ods-hsmutil login" and is stored in shared memory. The daemons
  will not start until this has been done by the user.