@@ -77,7 +77,9 @@ enum ods_enum_status {
     ODS_STATUS_SETSID_ERR,
     ODS_STATUS_UNCHANGED,
     ODS_STATUS_WRITE_PIDFILE_ERR,
-    ODS_STATUS_XML_ERR
+    ODS_STATUS_XML_ERR,
+
+    ODS_STATUS_XFR_NOT_READY
 };
 typedef enum ods_enum_status ods_status;
 
