@@ -3,6 +3,7 @@ $Id$
 
 OpenDNSSEC 1.4.0-trunk
 
+* OPENDNSSEC-350: Better log message when IXFR is not ready for reading.
 
 
 OpenDNSSEC 1.4.0rc1 - 2013-01-10
